modify query for re-execution if site differs